# CMMC-Map

./: .env  .env.dev.example  .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  docker-compose-dev.yaml  docker-compose-example.yaml  docker-compose-prod.yaml
.github/workflows/: django.yml
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  base_tables.sql  dbcreds.cnf.example  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  requirements.txt
backend/cmmchandler/: .gitignore  manage.py  settings.py  urls.py  wsgi.py
backend/policies/: admin.py  apps.py  auth.py  models.py  serializers.py  signals.py  urls.py  views.py
cmmc-map/: Dockerfile.dev  Dockerfile.prod  next.config.mjs  package.json
cmmc-map/app/: layout.tsx
cmmc-map/components/: evidence.module.css  header.tsx  helper.tsx  search.module.css  state-provider.tsx
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  dockerfile  jest.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  theme.ts
frontend/app/: dash-client.module.css  dash-client.tsx  dashboard-client.module.css  dashboard-client.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: evidence.tsx  header.module.css  header.tsx  helper.tsx  nav.module.css  nav.tsx  search.tsx  (+2 more)
nginx/: docker-entrypoint.sh  localhost.conf
nist_policies/: .gitignore  README.md  extract-text.py  parse.py
tools/: .env.example  .gitignore  README.md  extracted_text.txt  main.py  parse-policies.py  requirements.txt
(+58 files in other folders)
